styles.css
/* ... */
.experience-item:hover {
  box-shadow: 0 0 10px rgba(0, 128, 0, 0.3);
  transform: scale(1.01);
}

.experience-item:hover .experience-date {
  color: green; /* Change the color to red on hover */
  transition: all 0.3s ease; /* Add a transition effect */
}

.experience-item:hover .experience-container i {
  color: green;
}

.experience-text {
  font-size: 1em;
  color: #666;
}

.experience-date {
  font-size: 0.9em;
  font-weight: bold;
  color: #999;
  text-align: center;
  margin: 5px;
}

.experience-container {
  position: absolute;
  top: 10px;
  right: 10px;
  margin-left: 10px;
}

.experience-content ul {
  list-style-type: none;
  margin: 0;
}

.experience-content ul li::before {
  content: "•";
  display: inline-block;
  width: 1em;
}

.experience-row {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.experience {
  padding: 0 10px; /* Add some horizontal padding */
  word-wrap: break-word; /* Break the word */
  justify-content: flex-start; /* or center */
  white-space: normal; /* Wrap the text */
}


.experience-button:hover {
  background-color: green; /* Add this line */
  cursor: pointer; /* Add this line */
}

.experience-button:focus {
  border: none;
  outline: none;
}



/* Projects section */
#projects {
  position: relative;
}

#projects h2 {
  text-align: center; /* Centered title */
  margin-bottom: 10px; /* Space below the title */
}

#projects .list-group-item {
  background-color: #f9f9f9; /* Light grey background */
  border-radius: 15px; /* Rounded corners */
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
  margin-bottom: 20px; /* Space below each card */
  transition: all 0.3s ease;
  position: relative;
  border: 0px;
  transform: translateZ(0);
  will-change: transform;
}


#projects .list-group-item:hover {
  box-shadow: 0 0 10px rgba(0, 128, 0, 0.3);
  transform: scale(1.01) translateZ(0);
  z-index: 1;
}

.language-icon {
  position: absolute;
  top: 10px;
  right: 10px;
  font-size: 25px;
  transition: all 0.3s ease;
  color: black;
}

.project-tags{
    position: relative;
    font-size: 20px;
    transition: all 0.3s ease;
    align-content: center;
}

#projects .list-group-item:hover .language-icon {
  color: green; /* Change to the hover color for Python icon */
}

.project-details {
  display: flex;
  gap: 10px;
  margin-top: 10px;
  margin-bottom: 5px;
  justify-content: center;
  font-size: 1.05em; /* Smaller text */
}


/* Papers Section */
#papers {
  position: relative;
  transform: translateZ(0);
  will-change: transform; 
}

.paper {
  border: 0px solid #ddd; /* Lighter border color */
  border-radius: 15px; /* Less rounded corners */
  background-color: #f9f9f9; /* White background */
  transition: all 0.3s ease;
  position: relative;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  padding: 20px;
  justify-content: center;
  text-align: center;
  transform: translateZ(0);
  will-change: transform; 
}

.paper:hover {
  box-shadow: 0 0 20px rgba(0, 128, 0, 0.5);
  transform: scale(1.01) translateZ(0);
  z-index: 1;
}

.paper p {
  margin-bottom: 30px;
  text-align: center;
  padding: 5px;
}

.paper-preview {
  display: grid;
  grid-template-columns: repeat(2, 1fr); /* 2 columns */
  grid-template-rows: repeat(2, 1fr); /* 2 rows */
  gap: 20px; /* Adjust as needed */
  justify-content: space-between;
  transform: translateZ(0);
  will-change: transform; 
  transition: all 0.3s ease;
}

.paper-container {
  display: flex;
  gap: 10px;
  justify-content: center;
  transform: translateZ(0);
  will-change: transform; 
  transition: all 0.3s ease;
}


.paper-icons {
  display: flex;
  font-size: 25px;
  color: black;
}

.paper-icons a {
  color: black;
  transition: color 0.3s ease;
}

.paper-icons a:hover {
  color: green;
}

.paper button {
  position: absolute;
  bottom: 10px;
  left: 50%;
  transform: translateX(-50%);
  padding: 10px 15px;
  background-color: black;
  margin: 5px;
  color: #fff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 1em; /* Smaller text */
  transition: all 0.3s ease;
  text-transform: uppercase; /* Uppercase text */
}

.paper button:focus {
  border: none;
  outline: none;
}

.paper button:hover {
  background-color: green;
}

.paper .paper-icon {
  position: absolute;
  top: 10px;
  right: 10px;
  font-size: 22px;
  color: black;
}

.paper:hover .paper-icon {
  color: green; /* Change to the hover color for Python icon */
}


/* FOOTER SECTION */
footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #343a40;
  z-index: 100;
}

.footer-center {
  display: flex;
  align-items: center;
  padding: 10px;
  justify-content: center;
  color: white;
  font-size: 18px;
  transition: all 0.3s ease;
  flex-direction: column;
}

/* Social icons styles */
.footer-center a {
  color: white;
  font-size: 20px;
  justify-content: center;
}

.footer-center p {
  color: white;
  font-size: 0.8em;
  margin: 0;
}

/* FOOTER SECTION */

/* Styles for medium screens */
@media (max-width: 1024px) {
  h1,
  h2 {
    font-size: 1.75em;
    line-height: 1.4;
  }

  p {
    font-size: 0.9em;
    line-height: 1.4;
    margin: 0 0 0.9em;
    margin-top: 1.5em;
  }

  .profile-pic,
  .social-icons {
    position: absolute;
    top: 5px;
    right: 5px;
  }

  div:hover {
    transform: none !important; /* Disables any transform on hover for all divs */
  }

  #projects .list-group-item:hover {
    transform: none;
  }
  
}
/* ... */

